Fixed delete button alignment

--- a/ember/app/styles/_service_fragments.scss
+++ b/ember/app/styles/_service_fragments.scss
@@ -17,3 +17,8 @@ section.row  {
 }
 
 
+.c-panel-footer {
+  &__row {
+    margin: 0;
+  }
+}
